remove horizontal scrollbar, fix a bug, improve UI

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 body {
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
+  overflow-x: hidden;
 }
 
 button {
